--- a/index.html
+++ b/index.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quote of the day</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8">
+  <title>Random Quote Generator</title>
+  <link rel="stylesheet" href="quotestyle.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
-<body>
-    <div class="quotebox">
-        <h2>Quote of the Day</h2>
-        <blockquote id="quote">Loading...</blockquote>
-        <span id="author">Loading...</span>
-        <div>
-            <button onclick="getquote(api_url);">New Quote</button>
-            <button onclick="tweet()">Tweet</button>
-        </div>
-    </div>
-    <script>
-        const quote = document.getElementById("quote")
-        const author = document.getElementById("author")
-        const api_url = "https://api.quotable.io/random"
-        async function getquote(url)
-        {
-            const response = await fetch(url);
-            var data = await response.json();
-            console.log(data)
-            quote.innerHTML=data.content;
-            author.innerHTML=data.author;
-        }
-        getquote(api_url);
 
-        function tweet(){
-            window.open("https://twitter.com/intent/tweet?text=" + quote.innerHTML+"---by" + author.innerHTML ,"Tweet Window", "width = 600 height=400")
-        }
-    </script>
+<body>
+  <div class="wrapper">
+    <header>Quote of the Day</header>
+    <div class="content">
+      <div class="quote-area">
+        <i class="fas fa-quote-left"></i>
+        <p class="quote">Never give up because you never know if the next try is going to be the one that works.</p>
+        <i class="fas fa-quote-right"></i>
+      </div>
+      <div class="author">
+        <span>__</span>
+        <span class="name">Mary Kay Ash</span>
+      </div>
+    </div>
+    <div class="buttons">
+      <div class="features">
+        <ul>
+          
+          <li class="copy"><i class="fas fa-copy"></i></li>
+          <li class="twitter"><i class="fab fa-twitter"></i></li>
+        </ul>
+        <button>New Quote</button>
+      </div>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
